--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "@playwright/test": "^1.30.0",
     "@types/node": "^18.14.0"
+  },
+  "dependencies": {
+    "moment": "^2.29.4"
   }
 }
