--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@ node_modules/
 /test-results/
 /playwright-report/
 /playwright/.cache/
+/test-results/
+/playwright-report/
+/playwright/.cache/'
+jsonReports/
+eslintReport.json
+.DS_Store
