--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 BASE_URL="https://automationexercise.com/"
+LAMBDATEST_URL="https://www.lambdatest.com/selenium-playground/checkbox-demo"
+DROPDOWN_URL="https://www.lambdatest.com/selenium-playground/select-dropdown-demo"
+BOOTSTRAP_DROPDOWN_URL="https://www.lambdatest.com/selenium-playground/jquery-dropdown-search-demo"
+FRAMES_URL="https://letcode.in/frame"
+CALENDAR_URL="https://www.lambdatest.com/selenium-playground/bootstrap-date-picker-demo"
 LOGIN="magdal.sen@gmail.com"
 PASSWORD="Haslo@1234"
+FNAME="Mag"
+LNAME="Sen"
