first tests pet shop

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ DROPDOWN_URL="https://www.lambdatest.com/selenium-playground/select-dropdown-dem
 BOOTSTRAP_DROPDOWN_URL="https://www.lambdatest.com/selenium-playground/jquery-dropdown-search-demo"
 FRAMES_URL="https://letcode.in/frame"
 CALENDAR_URL="https://www.lambdatest.com/selenium-playground/bootstrap-date-picker-demo"
+BASE_URL_PETSTORE="https://petstore.swagger.io/v2"
 LOGIN="magdal.sen@gmail.com"
 PASSWORD="Haslo@1234"
 FNAME="Mag"
