--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "parser": "@typescript-eslint/parser", // Specifies the ESLint parser
   "env": {
+    "node": true,
     "browser": true,
     "es2021": true
   },
