--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.31.1",
+    "@types/jquery": "^3.5.16",
     "@types/node": "^18.15.3",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "eslint": "^8.34.0",
