login and logout cases

--- a/.env
+++ b/.env
@@ -6,5 +6,6 @@ CALENDAR_URL="https://www.lambdatest.com/selenium-playground/bootstrap-date-pick
 BASE_URL_PETSTORE="https://petstore.swagger.io/v2"
 LOGIN="magdal.sen@gmail.com"
 PASSWORD="Haslo@1234"
+BAD_LOGIN="magdal.sen@gmail.test"
 FNAME="Mag"
 LNAME="Sen"
